k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canada-tourist
  labels:
    name: canada-tourist
    app: canada-tourist-chatbot
